gitops/jenkins/jenkins2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: jenkins-init-scripts
              mountPath: /usr/share/jenkins/ref/init.groovy.d
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: jenkins-init-scripts
          configMap:
            name: jenkins-init-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ports:
    - name: 8080-port
      port: 8080
      targetPort: 8080
    - name: 50000-port
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: jenkins
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: 8080
  tls:
    termination: edge
